--- a/home.html
+++ b/home.html
@@ -39,19 +39,19 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li>
-                           <a href="#" >
+                           <a href="data_figure.html" >
                                 <i class="pe-7s-help1"></i>
                                 <p>数据展示</p>
                             </a>
                         </li>
                         <li>
-                           <a href="#" >
+                           <a href="home.html" >
                                 <i class="pe-7s-study"></i>
                                 <p>数据管理</p>
                             </a>
                         </li>
                         <li>
-                           <a href="#" >
+                           <a href="usermanage.html" >
                                 <i class="pe-7s-credit"></i>
                                 <p>用户管理</p>
                             </a>
