--- a/usermanage.html
+++ b/usermanage.html
@@ -67,5 +67,29 @@
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
+    <div class="containerWeb">
+        <div class="row">
+            <div class="col-md-8 col-md-offset-2">
+                <div class="table-responsive">
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th class="text-center">#</th>
+                                <th>登录名</th>
+                                <th>性别</th>
+                                <th>手机号</th>
+                                <th>密码</th>
+                                <th>注册时间</th>
+                                <th class="text-right">操作</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
