--- a/usermanage.html
+++ b/usermanage.html
@@ -67,29 +67,111 @@
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
     </nav>
-    <div class="containerWeb">
+    <div class="container">
         <div class="row">
-            <div class="col-md-8 col-md-offset-2">
+            <div class="col-md-8 col-md-offset-1">
                 <div class="table-responsive">
                     <table class="table">
                         <thead>
                             <tr>
                                 <th class="text-center">#</th>
-                                <th>登录名</th>
+                                <th>代理商</th>
                                 <th>性别</th>
                                 <th>手机号</th>
                                 <th>密码</th>
-                                <th>注册时间</th>
                                 <th class="text-right">操作</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="datacell">
 
                         </tbody>
                     </table>
                 </div>
             </div>
+            <div class="col-md-1">
+                <button style="margin-top: 10px" type="submit" onclick="adduser()" class="form-actions btn btn-social btn-block  btn-info">添加</button>
+            </div>
+        </div>
+         <div class="modal fade" id="subscription_table" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+             <div class="form-group">
+                <div class="modal-content"s>
+                    <div class="modal-body">
+                        <table class="table table-responsive">
+                            <tr>
+                                <td>姓名</td>
+                                <td colspan="3">
+                                    <input autocomplete="off" style="width: 150px;font-size: 13px" type="text" id="username" name="username">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>性别</td>
+                                <td colspan="3">
+                                    <input autocomplete="off" style="width: 150px;font-size: 12px" type="text" id="gender" name="gender">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>手机号</td>
+                                <td colspan="3">
+                                    <input autocomplete="off" style="width: 150px;font-size: 12px" type="text" id="telnumber" name="telnumber">
+                                </td>
+                                </tr>
+                            <tr>
+                                <td>密码</td>
+                                <td>
+                                    <input autocomplete="off" style="width: 150px;font-size: 12px" type="text" id="password" name="password">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="4">
+                                <button id="submit_data" type="button" onclick="submit_data()" class="btn btn-info btn-block">
+                                     确认添加
+                                </button>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+             </div>
         </div>
     </div>
+    </div>
+
+    <script src="assets/js/jquery.js" type="text/javascript"></script>
+	<script src="assets/js/jquery-ui.custom.min.js" type="text/javascript"></script>
+
+	<script src="bootstrap3/js/bootstrap.min.js" type="text/javascript"></script>
+
+    <script>
+        var dataArray=new Array()
+        function adduser() {
+            $("#username").val('');
+            $("#gender").val('');
+            $("#telnumber").val('');
+            $("#password").val('');
+            $('#subscription_table').modal('show');
+        }
+        function submit_data() {
+            var username = $("#username").val();
+            var gender = $("#gender").val();
+            var telnumber = $("#telnumber").val();
+            var password = $("#password").val();
+
+            var userinfo = new Object();
+            userinfo.username = username;
+            userinfo.gender = gender;
+            userinfo.telnumber = telnumber;
+            userinfo.password = password;
+            dataArray.push(userinfo);
+            $('#subscription_table').modal('hide');
+            addCell(userinfo)
+        }
+        function addCell(obj) {
+            var cellhtml = '<tr><td class="text-center">' + dataArray.length + '</td><td>'+obj.username+'</td><td>'+obj.gender+'</td><td>'+obj.telnumber+'</td><td>'+obj.password+'</td></tr>'
+            $(cellhtml).appendTo('#datacell');
+        }
+    </script>
+
+  、
 </body>
 </html>
