--- a/usermanage.html
+++ b/usermanage.html
@@ -92,7 +92,7 @@
                 <button style="margin-top: 10px" type="submit" onclick="adduser()" class="form-actions btn btn-social btn-block  btn-info">添加</button>
             </div>
         </div>
-         <div class="modal fade" id="subscription_table" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+         <div class="modal fade" id="add_table" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-dialog">
              <div class="form-group">
                 <div class="modal-content"s>
@@ -137,6 +137,51 @@
              </div>
         </div>
     </div>
+        <div class="modal fade" id="alert_table" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+             <div class="form-group">
+                <div class="modal-content"s>
+                    <div class="modal-body">
+
+                        <table class="table table-responsive">
+                            <tr>
+                                <td>姓名</td>
+                                <td colspan="3">
+                                    <input autocomplete="off" style="width: 150px;font-size: 13px" type="text" id="alert_username" name="username" required="required">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>性别</td>
+                                <td colspan="3">
+                                    <input  autocomplete="off" style="width: 150px;font-size: 12px" type="text" id="alert_gender" name="gender">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>手机号</td>
+                                <td colspan="3">
+                                    <input  autocomplete="off" style="width: 150px;font-size: 12px" type="text" id="alert_telnumber" name="telnumber">
+                                </td>
+                                </tr>
+                            <tr>
+                                <td>密码</td>
+                                <td>
+                                    <input  autocomplete="off" style="width: 150px;font-size: 12px" type="text" id="alert_password" name="password">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="4">
+                                <button id="alert_data" type="button" onclick="alert_submit()" class="btn btn-info btn-block">
+                                     确认修改
+                                </button>
+                                </td>
+                            </tr>
+                        </table>
+
+                    </div>
+                </div>
+             </div>
+        </div>
+    </div>
     </div>
 
     <script src="assets/js/jquery.js" type="text/javascript"></script>
@@ -146,12 +191,13 @@
 
     <script>
         var dataArray=new Array()
+        var alerttag = -1;
         function adduser() {
             $("#username").val('');
             $("#gender").val('');
             $("#telnumber").val('');
             $("#password").val('');
-            $('#subscription_table').modal('show');
+            $('#add_table').modal('show');
         }
         function submit_data() {
 
@@ -174,7 +220,7 @@
                 userinfo.telnumber = telnumber;
                 userinfo.password = password;
                 dataArray.push(userinfo);
-                $('#subscription_table').modal('hide');
+                $('#add_table').modal('hide');
                 showcell()
             }
         }
@@ -183,13 +229,47 @@
             for (var i = 0 ; i < dataArray.length; i ++){
                 var obj = dataArray[i];
                 var num = i + 1;
-                var cellhtml = '<tr><td class="text-center">' + num + '</td><td>'+obj.username+'</td><td>'+obj.gender+'</td><td>'+obj.telnumber+'</td><td>'+obj.password+'</td><td class="text-right"><button type="button" onclick="delete_cell(' + i + ')" class="btn btn-info">删除</button></td>/tr>'
+                var cellhtml = '<tr><td class="text-center">' + num + '</td><td>'+obj.username+'</td><td>'+obj.gender+'</td><td>'+obj.telnumber+'</td><td>'+obj.password+'</td><td class="text-right"><button type="button" onclick="delete_cell(' + i + ')" class="btn btn-info">删除</button><button style="margin-left: 10px" class="btn btn-info type="button" onclick="alert_cell(' + i + ')">修改'+'</button></td><tr>'
                 $(cellhtml).appendTo('#datacell');
             }
         }
-        function addCell(obj) {
-            var cellhtml = '<tr><td class="text-center">' + dataArray.length + '</td><td>'+obj.username+'</td><td>'+obj.gender+'</td><td>'+obj.telnumber+'</td><td>'+obj.password+'</td><td class="text-right"><button type="button" onclick="delete_cell(' + dataArray.length + ')" class="btn btn-info">删除</button></td>/tr>'
-            $(cellhtml).appendTo('#datacell');
+        function alert_cell(index) {
+            alerttag = index
+            var obj = dataArray[index]
+            alert_data(obj)
+
+        }
+        function alert_data(obj) {
+
+            $("#alert_username").val(obj.username);
+            $("#alert_gender").val(obj.gender);
+            $("#alert_telnumber").val(obj.telnumber);
+            $("#alert_password").val(obj.password);
+            $('#alert_table').modal('show');
+
+        }
+        function alert_submit() {
+             var username = $("#alert_username").val();
+            var gender = $("#alert_gender").val();
+            var telnumber = $("#alert_telnumber").val();
+            var password = $("#alert_password").val();
+            if (username.length == 0){
+                alert("请输入姓名")
+            } else if (gender.length == 0){
+                alert("请输入性别")
+            } else if (telnumber.length == 0){
+                alert("请输入手机号")
+            }else if (password.length == 0){
+                alert("请设置密码")
+            }else {
+                var userinfo = dataArray[alerttag];
+                userinfo.username = username;
+                userinfo.gender = gender;
+                userinfo.telnumber = telnumber;
+                userinfo.password = password;
+                $('#alert_table').modal('hide');
+                showcell()
+            }
         }
         function delete_cell(index) {
             dataArray.splice(index, 1)
