--- a/data_figure.html
+++ b/data_figure.html
@@ -43,7 +43,7 @@
                         <li>
                            <a href="data_figure.html" >
                                 <i class="pe-7s-help1"></i>
-                                <p>数据展示</p>
+                                <p>数据统计</p>
                             </a>
                         </li>
                         <li>
