--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@
                         <li>
                            <a href="data_figure.html" >
                                 <i class="pe-7s-help1"></i>
-                                <p>数据展示</p>
+                                <p>数据统计</p>
                             </a>
                         </li>
                         <li>
@@ -69,72 +69,49 @@
     </nav>
     <div class="container">
         <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <div class="table-responsive">
-                    <table class="table">
+            <div class="col-md-2">
+                <input class="datepicker form-control" data-date-format="yyyy-mm-dd"  placeholder=" 开始时间" type="text"/>
+            </div>
+
+            <div class="col-md-2">
+                <input class="datepicker form-control" data-date-format="yyyy-mm-dd"  placeholder=" 结束时间" type="text"/>
+            </div>
+            <div class="col-md-3" style="margin-top: 10px">
+                <select name="huge" class="selectpicker" data-style="btn-default btn-block" data-menu-style="dropdown-blue">
+                      <option value="water">水费</option>
+                      <option value="gas">天然气</option>
+                      <option value="electric">电费</option>
+                </select>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <div class="table-responsive" >
+                    <table class="table text-center" >
                         <thead>
                             <tr>
-                                <th class="text-center">#</th>
-                                <th>姓名</th>
-                                <th>电费</th>
-                                <th>水费</th>
-                                <th>天然气</th>
-                                <th>时间</th>
-                                <th class="text-right">总计</th>
-                                <th class="text-right">代理商</th>
+                                <th >#</th>
+                                <th>缴费机构代码</th>
+                                <th>户号</th>
+                                <th>支付宝交易流水号</th>
+                                <th>支付宝用户ID</th>
+                                <th>交易日期</th>
+                                <th>户主</th>
+                                <th>缴费金额</th>
+                                <th>代理商</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td class="text-center">1</td>
+                                <td>1</td>
                                 <td>王博</td>
                                 <td>1￥</td>
                                 <td>1￥</td>
                                 <td>1￥</td>
-                                <td>2018-01-01~2019-01-01</td>
-                                <td class="text-right">3￥</td>
-                                <td class="td-actions text-right">物业公司</td>
-                            </tr>
-                            <tr>
-
-                                <td class="text-center">2</td>
-                                <td>小张</td>
-                                <td>1￥</td>
-                                <td>1￥</td>
                                 <td>1￥</td>
                                 <td>2018-01-01~2019-01-01</td>
-                                <td class="text-right">3￥</td>
-                                <td class="td-actions text-right">物业公司</td>
-                            </tr>
-                            <tr>
-                                <td class="text-center">3</td>
-                                <td>小王</td>
-                                <td>1￥</td>
-                                <td>1￥</td>
-                                <td>1￥</td>
-                                <td>2018-01-01~2019-01-01</td>
-                                <td class="text-right">3￥</td>
-                                <td class="td-actions text-right">物业公司</td>
-                            </tr>
-                            <tr>
-                                <td class="text-center">4</td>
-                                <td>小周</td>
-                                <td>1￥</td>
-                                <td>1￥</td>
-                                <td>1￥</td>
-                                <td>2018-01-01~2019-01-01</td>
-                                <td class="text-right">3￥</td>
-                                <td class="td-actions text-right">物业公司</td>
-                            </tr>
-                            <tr>
-                                <td class="text-center">5</td>
-                                <td>小龙</td>
-                                <td>1￥</td>
-                                <td>1￥</td>
-                                <td>1￥</td>
-                                <td>2018-01-01~2019-01-01</td>
-                                <td class="text-right">3￥</td>
-                                <td class="td-actions text-right">物业公司</td>
+                                <td>3￥</td>
+                                <td>物业公司</td>
                             </tr>
                         </tbody>
                     </table>
@@ -144,4 +121,22 @@
     </div>
 
 </body>
+ <!--  jQuery and Bootstrap core files    -->
+    <script src="assets/js/jquery.js" type="text/javascript"></script>
+	<script src="assets/js/jquery-ui.custom.min.js" type="text/javascript"></script>
+	<script src="bootstrap3/js/bootstrap.min.js" type="text/javascript"></script>
+
+	<script src="assets/js/bootstrap-datepicker.js"></script>
+
+    <!--  Get Shit Done Kit PRO Core javascript 	 -->
+	<script src="assets/js/get-shit-done.js"></script>
+
+    <!--  Get Shit Done Kit PRO methods used for demo purpose      -->
+    <script src="assets/js/demo.js"></script>
+
+    <script>
+        $().ready(function(){
+
+        });
+    </script>
 </html>
