--- a/usermanage.html
+++ b/usermanage.html
@@ -6,7 +6,7 @@
 	<link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon.png">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-	<title>统计图</title>
+	<title>用户管理</title>
 
 	<meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport' />
     <meta name="viewport" content="width=device-width" />
@@ -41,7 +41,7 @@
                         <li>
                            <a href="data_figure.html" >
                                 <i class="pe-7s-help1"></i>
-                                <p>数据展示</p>
+                                <p>数据统计</p>
                             </a>
                         </li>
                         <li>
@@ -75,9 +75,9 @@
                         <thead>
                             <tr>
                                 <th class="text-center">#</th>
-                                <th>代理商</th>
-                                <th>性别</th>
-                                <th>手机号</th>
+                                <th>登录名</th>
+                                <th>角色</th>
+                                <th>联系方式</th>
                                 <th>密码</th>
                                 <th class="text-right">操作</th>
                             </tr>
@@ -100,19 +100,19 @@
 
                         <table class="table table-responsive">
                             <tr>
-                                <td>姓名</td>
+                                <td>登录名</td>
                                 <td colspan="3">
                                     <input autocomplete="off" style="width: 150px;font-size: 13px" type="text" id="username" name="username" required="required">
                                 </td>
                             </tr>
                             <tr>
-                                <td>性别</td>
+                                <td>角色</td>
                                 <td colspan="3">
                                     <input  autocomplete="off" style="width: 150px;font-size: 12px" type="text" id="gender" name="gender">
                                 </td>
                             </tr>
                             <tr>
-                                <td>手机号</td>
+                                <td>联系方式</td>
                                 <td colspan="3">
                                     <input  autocomplete="off" style="width: 150px;font-size: 12px" type="text" id="telnumber" name="telnumber">
                                 </td>
@@ -145,19 +145,19 @@
 
                         <table class="table table-responsive">
                             <tr>
-                                <td>姓名</td>
+                                <td>登录名</td>
                                 <td colspan="3">
                                     <input autocomplete="off" style="width: 150px;font-size: 13px" type="text" id="alert_username" name="username" required="required">
                                 </td>
                             </tr>
                             <tr>
-                                <td>性别</td>
+                                <td>角色</td>
                                 <td colspan="3">
                                     <input  autocomplete="off" style="width: 150px;font-size: 12px" type="text" id="alert_gender" name="gender">
                                 </td>
                             </tr>
                             <tr>
-                                <td>手机号</td>
+                                <td>联系方式</td>
                                 <td colspan="3">
                                     <input  autocomplete="off" style="width: 150px;font-size: 12px" type="text" id="alert_telnumber" name="telnumber">
                                 </td>
