--- a/index.html
+++ b/index.html
@@ -43,6 +43,18 @@
                                         <span class="input-group-addon"><i style="font-size: 20px" class="fa pe-7s-unlock"></i></span>
                                         <input autocomplete="off" required="required" id="password" name="password" type="password" placeholder="密码" value="123" class="form-control">
                                     </div>
+                                    <div style="margin-top: 10px" class="input-group">
+                                         <table border="0" cellspacing="20" cellpadding="20" >
+                                            <tr>
+                                                <td> <div style="background-color: yellow;font-size: 18px" id="checkCode" class="code"  onclick="createCode(4)" ></div></td>
+                                                <td> <span style="font-size: 18px" onclick="createCode(4)">看不清换一张</span></td>
+                                            </tr>
+                                            <tr>
+                                                <td>验证码：</td>
+                                                <td><input type="text" id="inputCode"  style="float:left;" /></td>
+                                            </tr>
+                                        </table>
+                                    </div>
                                     <div style="margin-top: 10px">
                                         <button  onclick="clickButton()" type="submit" class="form-actions btn btn-social btn-block btn-lg btn-fill btn-info">登录</button><br>
                                     </div>
@@ -55,13 +67,67 @@
         </div>
     </div>
     <script type="text/javascript">
+        window.onload=function(){
+            createCode(4);
+        }
+        function createCode(length) {
+            var code = "";
+            var codeLength = parseInt(length); //验证码的长度
+            var checkCode = document.getElementById("checkCode");
+            ////所有候选组成验证码的字符，当然也可以用中文的
+            var codeChars = new Array(0, 1, 2, 3, 4, 5, 6, 7, 8, 9,
+            'a','b','c','d','e','f','g','h','i','j','k','l','m','n','o','p','q','r','s','t','u','v','w','x','y','z',
+            'A', 'B', 'C', 'D', 'E', 'F', 'G', 'H', 'I', 'J', 'K', 'L', 'M', 'N', 'O', 'P', 'Q', 'R', 'S', 'T', 'U', 'V', 'W', 'X', 'Y', 'Z');
+            //循环组成验证码的字符串
+            for (var i = 0; i < codeLength; i++)
+            {
+                //获取随机验证码下标
+                var charNum = Math.floor(Math.random() * 62);
+                //组合成指定字符验证码
+                code += codeChars[charNum];
+            }
+            if (checkCode)
+            {
+                //为验证码区域添加样式名
+                checkCode.className = "code";
+                //将生成验证码赋值到显示区
+                checkCode.innerHTML = code;
+            }
+        }
         function clickButton() {
             var username = document.getElementById('username').value;
             var password = document.getElementById('password').value;
-            if(username == 'super' && password == '123'){
+            var istrue = validateCode();
+
+            if(username == 'super' && password == '123' && istrue){
                 window.location.href='home.html';
+            }else  if (istrue == false) {
+
             }else  {
-                alert('用户名或密码错误')
+                alert('用户名或密码错误');
+            }
+        }
+        //检查验证码是否正确
+        function validateCode()
+        {
+            //获取显示区生成的验证码
+            var checkCode = document.getElementById("checkCode").innerHTML;
+            //获取输入的验证码
+            var inputCode = document.getElementById("inputCode").value;
+            //console.log(checkCode);
+            //console.log(inputCode);
+            if (inputCode.length <= 0)
+            {
+                alert("请输入验证码！");
+                return false;
+            }
+            else if (inputCode.toUpperCase() != checkCode.toUpperCase())
+            {
+                alert("验证码输入有误！");
+                createCode(4);
+                return false;
+            }else {
+                return true;
             }
         }
     </script>
@@ -74,22 +140,6 @@
 
 	<script src="bootstrap3/js/bootstrap.min.js" type="text/javascript"></script>
 
-	<!--  Plugins -->
-	<script src="assets/js/gsdk-checkbox.js"></script>
-	<script src="assets/js/gsdk-morphing.js"></script>
-	<script src="assets/js/gsdk-radio.js"></script>
-	<script src="assets/js/gsdk-bootstrapswitch.js"></script>
-	<script src="assets/js/bootstrap-select.js"></script>
-	<script src="assets/js/bootstrap-datepicker.js"></script>
-	<script src="assets/js/chartist.min.js"></script>
-    <script src="assets/js/jquery.tagsinput.js"></script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
-
-    <!--  Get Shit Done Kit PRO Core javascript 	 -->
-	<script src="assets/js/get-shit-done.js"></script>
-
-    <!--  Get Shit Done Kit PRO methods used for demo purpose      -->
-    <script src="assets/js/demo.js"></script>
 
     <script>
         $().ready(function(){
